fix: add visibility:hidden to selector:after (#42654)

--- a/components/select/style/multiple.less
+++ b/components/select/style/multiple.less
@@ -54,6 +54,7 @@
         width: 0;
         margin: @select-multiple-item-spacing-half 0;
         line-height: @select-multiple-item-height;
+        visibility: hidden;
         content: '\a0';
       }
     }
